# 5G_heatmap_gazeebo

./: CMakeLists.txt  README.md  analyze_results.py  heatmap.py  run_comparison.sh
comparison_results/20251213_151314/: comparison_report.txt  latex_tables.tex  summary_all_scenarios.csv
comparison_results/20251213_151314/figures/: best_models_report.txt  statistics_table.csv
comparison_results/20251213_151314/raw_data/: scenario_dense_urban.csv  scenario_elevated_macro.csv  scenario_elevated_macro_stats.csv  scenario_indoor_outdoor_stats.csv  scenario_open_field_stats.csv  scenario_street_canyon.csv  scenario_street_canyon_stats.csv
comparison_results/20251213_155909/: comparison_report.txt
comparison_results/20251213_155909/figures/: statistics_table.tex
comparison_results/20251213_155909/raw_data/: scenario_dense_urban_stats.csv  scenario_indoor_outdoor.csv  scenario_open_field.csv
include/heatmap_plugin/: HeatmapPlugin.hh  HeatmapRenderPlugin.hh  PropagationModels.hh
scripts/: heatmap_control.sh
src/: HeatmapPlugin.cc  HeatmapRenderPlugin.cc  PropagationModels.cc
worlds/: guiconfig.config  heatmap_world.sdf  scenario_dense_urban.sdf  scenario_elevated_macro.sdf  scenario_indoor_outdoor.sdf  scenario_open_field.sdf  scenario_street_canyon.sdf
